--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -12,6 +12,15 @@
 //   lg: 992px,
 //   xl: 1300px);
 
+$theme-colors: (
+  'yellow': #f8ad00,
+  'green': #30b24d,
+  'blue': #187fc2,
+  'red': #cc312b,
+  'darker': #111111,
+  'darker-50': #111111
+);
+
 $spacer: 1rem !default;
 $spacers: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
