--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -18,7 +18,8 @@ $theme-colors: (
   'blue': #187fc2,
   'red': #cc312b,
   'darker': #111111,
-  'darker-50': #111111
+  'darker-50': #6c6c6c,
+  'darker-25': #f0f0f0
 );
 
 $spacer: 1rem !default;
