--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,11 +1,14 @@
 //Add variable overrides here
 // or via an @import
-@import 'variables';
+@import '_variables';
 
 // Then include the following
 @import 'bootstrap/scss/bootstrap.scss';
 @import 'bootstrap-vue/src/index.scss';
 
+// Import custom components
+@import '_buttons';
+
 // And define any of your custom or additional CSS/SCSS here,
 // or via an @import
-@import 'custom';
+@import '_custom';
