bug(minor fixes): fix ui issues on header, footer and home page

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -94,3 +94,11 @@ a:hover {
   background-position: center center;
   background-size: cover;
 }
+
+.color-row {
+  height: 8px;
+  .color {
+    width: 150px;
+    height: 100%;
+  }
+}
