feature(course form): add form to each course and add meta tags to course page

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -102,3 +102,23 @@ a:hover {
     height: 100%;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #d1d1d1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $blue;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
