chore(comment feature): add disqus for commenting on blogposts

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -19,7 +19,10 @@ $theme-colors: (
   'red': #cc312b,
   'darker': #111111,
   'darker-50': #6c6c6c,
-  'darker-25': #f0f0f0
+  'darker-25': #f0f0f0,
+  'facebook': #145fc3,
+  'twitter': #1da1f3,
+  'whatsapp': #26d367
 );
 
 $spacer: 1rem !default;
